--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile project(':testlib')
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 }
